# cryptocurrency_pumps_and_dumps

./: .gitignore  pyproject.toml
src/analysis/: research_notebook.ipynb
src/core/: currency_pair.py  exchange.py  feature_type.py  paths.py  pump_event.py  time_utils.py  utils.py
src/feature_writer/: binance.py  enums.py  feature_exprs.py  pump_feature_writer.py  utils.py
src/preprocessing/: run.py
test/preprocessing/: test_binance_spot_trades_to_hive.py
